feat(security): implement JWT auth, inject roles into SecurityContext, and configure RBAC with Spring Security